New version: EditorsRepo v0.6.11
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: 9e99f8718f3c43448ec883ba210e3df3159c2fed

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Compat.toml
+++ b/E/EditorsRepo/Compat.toml
@@ -33,6 +33,9 @@ Orthography = "0.3"
 ["0.6.10-0"]
 Lycian = "0.1"
 
+["0.6.11-0"]
+EditionBuilders = "0.2.3-0.2"
+
 ["0.6.5-0"]
 CitableTeiReaders = "0.4"
 
@@ -42,7 +45,7 @@ EditionBuilders = "0.2"
 ["0.6.7"]
 EditionBuilders = "0.2.1-0.2"
 
-["0.6.8-0"]
+["0.6.8-0.6.10"]
 EditionBuilders = "0.2.2-0.2"
 
 ["0.6.9-0"]
