--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -57,3 +57,6 @@ git-tree-sha1 = "a0f32b5e2a9646ef1d5fb995e0e74c64aeb15ae5"
 
 ["0.6.10"]
 git-tree-sha1 = "b2d66a36921b0d5934697fef61d4d959d545c1b6"
+
+["0.6.11"]
+git-tree-sha1 = "9e99f8718f3c43448ec883ba210e3df3159c2fed"
