--- a/S/SauterSchwabQuadrature/Compat.toml
+++ b/S/SauterSchwabQuadrature/Compat.toml
@@ -1,5 +1,12 @@
 [2]
+julia = ["0.7", "1"]
+
+["2-2.1.0"]
 CompScienceMeshes = "0.0.0 - 0.2"
 FastGaussQuadrature = "0.0.0 - 0.4"
 StaticArrays = "0.0.0 - 0.12"
-julia = ["0.7", "1"]
+
+["2.1.1-2"]
+CompScienceMeshes = "0.2"
+FastGaussQuadrature = "0.3-0.4"
+StaticArrays = ["0.12", "1"]
