--- a/S/SauterSchwabQuadrature/Versions.toml
+++ b/S/SauterSchwabQuadrature/Versions.toml
@@ -1,2 +1,5 @@
 ["2.1.0"]
 git-tree-sha1 = "04613230d106781615014703c3bee8bb62e934d0"
+
+["2.1.1"]
+git-tree-sha1 = "8218588065871ebba62938e43b00e6b1c67fa0a5"
