New version: DynamicalSystemsBase v1.7.0
UUID: 6e36e845-645a-534a-86f2-f5d4aa5a06b4
Repo: https://github.com/JuliaDynamics/DynamicalSystemsBase.jl.git
Tree: a54e603cd8980bcdff8a2f0f2dbc514a015c2320

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DynamicalSystemsBase/Versions.toml
+++ b/D/DynamicalSystemsBase/Versions.toml
@@ -105,3 +105,6 @@ git-tree-sha1 = "7812033befc1bab2e7a87294af3226860e5a089c"
 
 ["1.6.7"]
 git-tree-sha1 = "a024c3e831db486734c8e17a21594e204a97504e"
+
+["1.7.0"]
+git-tree-sha1 = "a54e603cd8980bcdff8a2f0f2dbc514a015c2320"
