--- a/W/WiltonInts84/Versions.toml
+++ b/W/WiltonInts84/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "c5623b818010008a56b5cf2d1293f3f1f1bfb3f2"
 
 ["0.2.1"]
 git-tree-sha1 = "1f5474dac833eaf554c40e7e1da331eb90d1bc84"
+
+["0.2.2"]
+git-tree-sha1 = "b7374c784a208b377157146e3bdd94287e41f95a"
