--- a/F/FeatureEng/Versions.toml
+++ b/F/FeatureEng/Versions.toml
@@ -1,2 +1,5 @@
 ["1.0.1"]
 git-tree-sha1 = "06a50db53aa710dd9e1102e1ed0a361832fb00e5"
+
+["1.2.7"]
+git-tree-sha1 = "22d6ce7097608a335dceb6fbb14d72395b1aad97"
