--- a/F/FEHM/Compat.toml
+++ b/F/FEHM/Compat.toml
@@ -1,7 +1,10 @@
-[0]
+["0-0.2.0"]
 DocumentFunction = "0.0.0 - 0.6"
 FileIO = "0.0.0 - 1"
 JLD = "0.0.0 - 0.10"
 JLD2 = "0.0.0 - 0.2"
 WriteVTK = "0.0.0 - 1"
 julia = "1.0.0-1"
+
+["0.2.1-0"]
+julia = "1"
