New version: FEHM v0.3.0
UUID: 08f7bda6-d19a-5869-bd1c-a698fdb2a278
Repo: https://github.com/zemjulia/FEHM.jl.git
Tree: 21d3b55d8a02e79ef388603bc1f0d8acc9b6fad8

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/F/FEHM/Versions.toml
+++ b/F/FEHM/Versions.toml
@@ -1,2 +1,5 @@
 ["0.2.0"]
 git-tree-sha1 = "13d6378d96df75ee23059d317601546524919c14"
+
+["0.3.0"]
+git-tree-sha1 = "21d3b55d8a02e79ef388603bc1f0d8acc9b6fad8"
