New version: CitableTeiReaders v0.4.2
UUID: b4325aa9-906c-402e-9c3f-19ab8a88308e
Repo: https://github.com/HCMID/CitableTeiReaders.jl.git
Tree: e533934dab12022718ff312d8c291f0a7c12e3f4

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CitableTeiReaders/Versions.toml
+++ b/C/CitableTeiReaders/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "c1138d1cd28a1192519be6bfb5eb7bdfaafeb132"
 
 ["0.4.1"]
 git-tree-sha1 = "7e084a8ff68e12d96cc6bdd226e6f3fcf9135297"
+
+["0.4.2"]
+git-tree-sha1 = "e533934dab12022718ff312d8c291f0a7c12e3f4"
