--- a/F/FeatureEng/Deps.toml
+++ b/F/FeatureEng/Deps.toml
@@ -4,3 +4,6 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Parameters = "d96e819e-fc66-5662-9728-84c9c7592b0a"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+["1.1-1"]
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
