--- a/F/FeatureEng/Versions.toml
+++ b/F/FeatureEng/Versions.toml
@@ -1,2 +1,5 @@
 ["1.0.1"]
 git-tree-sha1 = "06a50db53aa710dd9e1102e1ed0a361832fb00e5"
+
+["1.1.0"]
+git-tree-sha1 = "359185e30a2ba723764b55e9efea6da2195d2632"
