New version: DrWatson v1.17.0
UUID: 634d3b9d-ee7a-5ddf-bec9-22491ea816e1
Repo: https://github.com/JuliaDynamics/DrWatson.jl.git
Tree: b9700d64ee0d1010dd71afed9fae7147291aaabe

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DrWatson/Versions.toml
+++ b/D/DrWatson/Versions.toml
@@ -204,3 +204,6 @@ git-tree-sha1 = "bd2b14334d1263790f4076d257fb3b87de8924b0"
 
 ["1.16.6"]
 git-tree-sha1 = "026cfaa2341860e7436256b8272d73d4f91a5c18"
+
+["1.17.0"]
+git-tree-sha1 = "b9700d64ee0d1010dd71afed9fae7147291aaabe"
