New version: FeatureEng v1.2.0
UUID: 1da23141-447d-474e-a064-8dd6bac2aab2
Repo: https://github.com/a-poor/FeatureEng.jl.git
Tree: 9bcaa7cb04a16e051c3925b4bc5c2c5d5d810b18

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/F/FeatureEng/Versions.toml
+++ b/F/FeatureEng/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "06a50db53aa710dd9e1102e1ed0a361832fb00e5"
 
 ["1.1.0"]
 git-tree-sha1 = "359185e30a2ba723764b55e9efea6da2195d2632"
+
+["1.2.0"]
+git-tree-sha1 = "9bcaa7cb04a16e051c3925b4bc5c2c5d5d810b18"
