New version: FeatureEng v1.3.0
UUID: 1da23141-447d-474e-a064-8dd6bac2aab2
Repo: https://github.com/a-poor/FeatureEng.jl.git
Tree: ec91499261f874b725b0dbc6cebb9c15bab6334c

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/F/FeatureEng/Versions.toml
+++ b/F/FeatureEng/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "359185e30a2ba723764b55e9efea6da2195d2632"
 
 ["1.2.0"]
 git-tree-sha1 = "9bcaa7cb04a16e051c3925b4bc5c2c5d5d810b18"
+
+["1.3.0"]
+git-tree-sha1 = "ec91499261f874b725b0dbc6cebb9c15bab6334c"
