--- a/U/UnitTestDesign/Versions.toml
+++ b/U/UnitTestDesign/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "6dbac77929682e40c6a1cabdc5948721e383f1d7"
+
+["0.2.0"]
+git-tree-sha1 = "53793c416b4f0af77cff39c696bb4a9dc6e482a0"
