--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "a8d380498aa88b54475f662b1604e0fbe3ca54fd"
 
 ["0.2.3"]
 git-tree-sha1 = "51983eaa34c4d8ce3ce21118141e3514b491257a"
+
+["0.2.4"]
+git-tree-sha1 = "fab303e07315079efd1ab4876a340620f71be948"
