New version: Agents v4.0.4
UUID: 46ada45e-f475-11e8-01d0-f70cc89e6671
Repo: https://github.com/JuliaDynamics/Agents.jl.git
Tree: 773ed30c8d560b1fd9f5986cd084092483dc8156

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/A/Agents/Versions.toml
+++ b/A/Agents/Versions.toml
@@ -99,3 +99,6 @@ git-tree-sha1 = "c8456ff2742d91379aa601a304bf468e2505c9ef"
 
 ["4.0.3"]
 git-tree-sha1 = "98209fc2e3b68cb4c977cfbf956c9a8fe2139c84"
+
+["4.0.4"]
+git-tree-sha1 = "773ed30c8d560b1fd9f5986cd084092483dc8156"
