--- a/B/BEAST/Compat.toml
+++ b/B/BEAST/Compat.toml
@@ -28,17 +28,30 @@ StaticArrays = "0.8.3-0.9"
 CompScienceMeshes = "0.2.2 - 0.2"
 StaticArrays = "0.8.3 - 0.12"
 
-["1.2-1"]
+["1.2"]
 BlockArrays = "0.10-0.12"
-CollisionDetection = "0.1"
 Combinatorics = "0.7"
 CompScienceMeshes = "0.2.5-0.2"
 Compat = "2"
-FFTW = ["0.2.3-0.2", "1"]
-FastGaussQuadrature = "0.3-0.4"
 IterativeSolvers = "0.7-0.8"
-SauterSchwabQuadrature = "2.1.0-2"
 SpecialFunctions = "0.7-0.8"
 StaticArrays = "0.8.3-0.12"
-WiltonInts84 = "0.2"
 julia = "1"
+
+["1.2-1"]
+CollisionDetection = "0.1"
+FFTW = ["0.2.3-0.2", "1"]
+FastGaussQuadrature = "0.3-0.4"
+SauterSchwabQuadrature = "2.1.0-2"
+WiltonInts84 = "0.2"
+
+["1.3-1"]
+BlockArrays = "0.10-0.14"
+Combinatorics = ["0.7", "1"]
+CompScienceMeshes = "0.2.8-0.2"
+Compat = "2-3"
+IterativeSolvers = "0.9"
+SparseMatrixDicts = "0.2"
+SpecialFunctions = ["0.7-0.10", "1"]
+StaticArrays = ["0.8.3-0.12", "1"]
+julia = "1.3.0-1"
