--- a/B/BEAST/Deps.toml
+++ b/B/BEAST/Deps.toml
@@ -24,3 +24,6 @@ Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 ["1.2-1"]
 BlockArrays = "8e7c35d0-a365-5155-bbbb-fb81a777f24e"
+
+["1.3-1"]
+SparseMatrixDicts = "5cb6c4b0-9b79-11e8-24c9-f9621d252589"
