--- a/B/BEAST/Versions.toml
+++ b/B/BEAST/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "20d3da2b579e488292f552582cab481b4130cbf9"
 
 ["1.2.0"]
 git-tree-sha1 = "91cdff3deea68b31d0a8cdb2fc6e539174936b6d"
+
+["1.3.0"]
+git-tree-sha1 = "7754b0c61dac72ec7ea524f2bfa831966edd2d97"
