--- a/M/MLJMultivariateStatsInterface/Versions.toml
+++ b/M/MLJMultivariateStatsInterface/Versions.toml
@@ -24,3 +24,4 @@ git-tree-sha1 = "0c7a150cc0e0f506809d64e29f75ab7f061d5f82"
 
 ["0.1.8"]
 git-tree-sha1 = "775c587e6273747fc77281cdb9072a26ee4759a9"
+yanked = true
