--- a/Registry.toml
+++ b/Registry.toml
@@ -2732,6 +2732,7 @@ some amount of consideration when choosing package names.
 8838a6a3-0006-4405-b874-385995508d5d = { name = "GridapEmbedded", path = "G/GridapEmbedded" }
 88497964-e39a-11e9-0fb5-b1bf0ffe80fe = { name = "FresnelIntegrals", path = "F/FresnelIntegrals" }
 88634af6-177f-5301-88b8-7819386cfa38 = { name = "SaferIntegers", path = "S/SaferIntegers" }
+88a5189c-e7ff-4f85-ac6b-e6158070f02e = { name = "DataAugmentation", path = "D/DataAugmentation" }
 88b4ec78-b192-11e8-04aa-4d367dd96a64 = { name = "Coluna", path = "C/Coluna" }
 88bd2ba4-b024-4779-b1f7-c7f148753aae = { name = "BeeEncoder", path = "B/BeeEncoder" }
 88be2ce5-dfe4-4538-82c0-aa279cdf463c = { name = "InfrastructureSensing", path = "I/InfrastructureSensing" }
