--- a/S/StatisticalRethinking/Deps.toml
+++ b/S/StatisticalRethinking/Deps.toml
@@ -144,3 +144,6 @@ NamedTupleTools = "d9ec5142-1e00-5aa0-9d6a-321866360f50"
 
 ["3.1.9-3"]
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+
+["3.2.2-3"]
+ParetoSmoothedImportanceSampling = "98f080ec-61e2-11eb-1c7b-31ea1097256f"
