--- a/S/StatisticalRethinking/Versions.toml
+++ b/S/StatisticalRethinking/Versions.toml
@@ -150,3 +150,6 @@ git-tree-sha1 = "1cb2ad68d372a2a50b0118c4fd164167686a6a08"
 
 ["3.2.1"]
 git-tree-sha1 = "951e0e0a72dad59a354c6e4a9cf5141ddb843eb3"
+
+["3.2.2"]
+git-tree-sha1 = "52bd884f813b52e0e984adfe1e815efe95e75d47"
