New package: ModiaPlot v0.7.0
UUID: 951137b1-a5aa-4c03-8412-295bfee9a204
Repo: https://github.com/ModiaSim/ModiaPlot.jl.git
Tree: f17e3f3401c9f211cc226534bbf43b04a6d05baf

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/Registry.toml
+++ b/Registry.toml
@@ -2953,6 +2953,7 @@ some amount of consideration when choosing package names.
 94e1309d-ccf4-42de-905f-515f1d7b1cae = { name = "HealthBase", path = "H/HealthBase" }
 94ee1d12-ae83-5a48-8b1c-48b8ff168ae0 = { name = "Quaternions", path = "Q/Quaternions" }
 94fc9360-1a5e-4d84-93be-ddbadb32b3a7 = { name = "AlignedBinaryFormat", path = "A/AlignedBinaryFormat" }
+951137b1-a5aa-4c03-8412-295bfee9a204 = { name = "ModiaPlot", path = "M/ModiaPlot" }
 95167b0c-186a-594b-a231-52369c6de044 = { name = "LinearAlgebraicRepresentation", path = "L/LinearAlgebraicRepresentation" }
 9516f557-4a54-5a79-b954-c272e753c77a = { name = "Psychro", path = "P/Psychro" }
 952205b0-75a0-561c-bf54-4eaf7b36f838 = { name = "ConicNonlinearBridge", path = "C/ConicNonlinearBridge" }
