--- a/B/BijectiveHilbert/Versions.toml
+++ b/B/BijectiveHilbert/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "d0447e4e98b82ee8cb16b0efafb19650d51ba5bb"
+
+["0.2.0"]
+git-tree-sha1 = "dc88375a01504ecd67abcfb7624479cf5fb93c17"
