New version: EditionBuilders v0.2.6
UUID: 2fb66cca-c1f8-4a32-85dd-1a01a9e8cd8f
Repo: https://github.com/HCMID/EditionBuilders.jl.git
Tree: ede56d0ad9c39879a1b70cc7645124a068479573

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "fab303e07315079efd1ab4876a340620f71be948"
 
 ["0.2.5"]
 git-tree-sha1 = "c45b45c1cde5d666033ca8090061900d841bd34e"
+
+["0.2.6"]
+git-tree-sha1 = "ede56d0ad9c39879a1b70cc7645124a068479573"
