New version: Vlasiator v0.1.6
UUID: 7d2ba682-ad6e-4e20-80d9-3f2d4a610bb4
Repo: https://github.com/henry2004y/Vlasiator.jl.git
Tree: aa4356d4ed6d075db8928da5eb052f833b39b00e

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -15,3 +15,6 @@ git-tree-sha1 = "4f08a0cb56926bd5304db87fb46863df0d172174"
 
 ["0.1.5"]
 git-tree-sha1 = "4589ae620ea67461d64dd72f59f11eb1fe9adea1"
+
+["0.1.6"]
+git-tree-sha1 = "aa4356d4ed6d075db8928da5eb052f833b39b00e"
