--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "ede56d0ad9c39879a1b70cc7645124a068479573"
 
 ["0.2.7"]
 git-tree-sha1 = "52c2a380922848d602ef39e4a96377f63d6bc5a0"
+
+["0.2.8"]
+git-tree-sha1 = "901e5389cee9b9a8b7cc8a6e8e7504ef452402e4"
