New version: EditionBuilders v0.2.9
UUID: 2fb66cca-c1f8-4a32-85dd-1a01a9e8cd8f
Repo: https://github.com/HCMID/EditionBuilders.jl.git
Tree: caead532f547a505047966335ea0fa3534e322a8

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditionBuilders/Versions.toml
+++ b/E/EditionBuilders/Versions.toml
@@ -27,3 +27,6 @@ git-tree-sha1 = "52c2a380922848d602ef39e4a96377f63d6bc5a0"
 
 ["0.2.8"]
 git-tree-sha1 = "901e5389cee9b9a8b7cc8a6e8e7504ef452402e4"
+
+["0.2.9"]
+git-tree-sha1 = "caead532f547a505047966335ea0fa3534e322a8"
