--- a/B/BijectiveHilbert/Versions.toml
+++ b/B/BijectiveHilbert/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "d0447e4e98b82ee8cb16b0efafb19650d51ba5bb"
 
 ["0.2.0"]
 git-tree-sha1 = "dc88375a01504ecd67abcfb7624479cf5fb93c17"
+
+["0.2.1"]
+git-tree-sha1 = "f0fe4c975245db03936464bd38d27a3c34f088b5"
