--- a/M/MongocUtils/Versions.toml
+++ b/M/MongocUtils/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "335fbdab792a7a6696a49ceb0d7275a1d6a0cc44"
 
 ["0.1.3"]
 git-tree-sha1 = "27e7e19f87ddd52b3854d3f36cd6efb755879fb6"
+
+["0.1.4"]
+git-tree-sha1 = "dc811e2b182637b0b90fa56eff2b88fe47c882ef"
