New version: SymbolicUtils v0.8.2
UUID: d1185830-fcd6-423d-90d6-eec64667417b
Repo: https://github.com/JuliaSymbolics/SymbolicUtils.jl.git
Tree: 89425f2e56680627bfe08d334a0c5112bfa50c66

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/SymbolicUtils/Compat.toml
+++ b/S/SymbolicUtils/Compat.toml
@@ -37,7 +37,12 @@ AbstractAlgebra = "0.9-0.12"
 ["0.8-0"]
 IfElse = "0.1"
 LabelledArrays = "1.5.0-1"
+
+["0.8-0.8.1"]
 StaticArrays = "1"
 
 ["0.8.1-0"]
 AbstractTrees = "0.3"
+
+["0.8.2-0"]
+StaticArrays = ["0.12", "1"]
