--- a/S/SymbolicUtils/Versions.toml
+++ b/S/SymbolicUtils/Versions.toml
@@ -93,3 +93,6 @@ git-tree-sha1 = "0124ec2d1e64d93a3cac0c76666d67b9da5ee21b"
 
 ["0.8.1"]
 git-tree-sha1 = "014239e32c8068d2ae8a51a0b0b2950a215fef2b"
+
+["0.8.2"]
+git-tree-sha1 = "89425f2e56680627bfe08d334a0c5112bfa50c66"
