New version: Batsrus v0.2.4
UUID: e74ebddf-6ac1-4047-a0e5-c32c99e57753
Repo: https://github.com/henry2004y/Batsrus.jl.git
Tree: 09ee11ea85fc057f68e432f9b998b6de20e8c6ae

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/B/Batsrus/Versions.toml
+++ b/B/Batsrus/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "bad3b414b9c3e3afea811dc6c853184b2d4189a2"
 
 ["0.2.3"]
 git-tree-sha1 = "175d597c45f57273dc30880adddd08bc59fd56ba"
+
+["0.2.4"]
+git-tree-sha1 = "09ee11ea85fc057f68e432f9b998b6de20e8c6ae"
