New version: CitableText v0.4.1
UUID: 41e66566-473b-49d4-85b7-da83b66615d8
Repo: https://github.com/cite-architecture/CitableText.jl.git
Tree: 86b6a790e2af40f6c3db5d7bb12aacc223d6c9a5

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/C/CitableText/Versions.toml
+++ b/C/CitableText/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "de34fef99de2abecab6814bd3012cd686a96aaa0"
 
 ["0.4.0"]
 git-tree-sha1 = "11a3280b4361b4bbde4136256225c7b51f6c67f2"
+
+["0.4.1"]
+git-tree-sha1 = "86b6a790e2af40f6c3db5d7bb12aacc223d6c9a5"
