--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -18,3 +18,6 @@ git-tree-sha1 = "4589ae620ea67461d64dd72f59f11eb1fe9adea1"
 
 ["0.1.6"]
 git-tree-sha1 = "aa4356d4ed6d075db8928da5eb052f833b39b00e"
+
+["0.1.7"]
+git-tree-sha1 = "cf9f56aa6b3a9b7f25229adbda475f3bed271a93"
