--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -21,3 +21,6 @@ git-tree-sha1 = "aa4356d4ed6d075db8928da5eb052f833b39b00e"
 
 ["0.1.7"]
 git-tree-sha1 = "cf9f56aa6b3a9b7f25229adbda475f3bed271a93"
+
+["0.1.8"]
+git-tree-sha1 = "e48063a5a6b2d01dd28d48e98b562b267325d7f6"
