--- a/Registry.toml
+++ b/Registry.toml
@@ -4641,6 +4641,7 @@ eacbb407-ea5a-433e-ab97-5258b1ca43fa = { name = "Meshes", path = "M/Meshes" }
 ead7e11d-4ba5-55c3-9d74-177ea73ef1fd = { name = "TuringModels", path = "T/TuringModels" }
 eadaa1a4-d27c-401d-8699-e962e1bbc33b = { name = "MeasureTheory", path = "M/MeasureTheory" }
 eadc2687-ae89-51f9-a5d9-86b5a6373a9c = { name = "Pandas", path = "P/Pandas" }
+eadfb9d8-44f1-454c-a5eb-0663ee7d74a1 = { name = "AdaOPS", path = "A/AdaOPS" }
 eafb193a-b7ab-5a9e-9068-77385905fa72 = { name = "Highlights", path = "H/Highlights" }
 eb17b914-a2e5-45e7-813f-e6fb2969af31 = { name = "DobotMagician", path = "D/DobotMagician" }
 eb300fae-53e8-50a0-950c-e21f52c2b7e0 = { name = "DiffEqBiological", path = "D/DiffEqBiological" }
