New version: DrWatson v1.18.0
UUID: 634d3b9d-ee7a-5ddf-bec9-22491ea816e1
Repo: https://github.com/JuliaDynamics/DrWatson.jl.git
Tree: e0dc5a9c7802730967cc56c17a733fe52775b2ee

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DrWatson/Versions.toml
+++ b/D/DrWatson/Versions.toml
@@ -207,3 +207,6 @@ git-tree-sha1 = "026cfaa2341860e7436256b8272d73d4f91a5c18"
 
 ["1.17.0"]
 git-tree-sha1 = "b9700d64ee0d1010dd71afed9fae7147291aaabe"
+
+["1.18.0"]
+git-tree-sha1 = "e0dc5a9c7802730967cc56c17a733fe52775b2ee"
