--- a/P/PetscWrap/Deps.toml
+++ b/P/PetscWrap/Deps.toml
@@ -1,3 +1,6 @@
 [0]
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 MPI = "da04e1cc-30fd-572f-bb4f-1f8673147195"
+
+["0.1.1-0"]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
