--- a/P/PetscWrap/Versions.toml
+++ b/P/PetscWrap/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "1bd2e23e2706b088c00a4fbb9d73f4ffe7772aa4"
+
+["0.1.1"]
+git-tree-sha1 = "e2ed7077b69ac52bc5307cda4c927b609d0b0425"
