--- a/Registry.toml
+++ b/Registry.toml
@@ -3883,6 +3883,7 @@ c3572dad-4567-51f8-b174-8c6c989267f4 = { name = "Sundials", path = "S/Sundials" 
 c35d69d1-b747-5018-a192-25bc5e63c83d = { name = "SMTPClient", path = "S/SMTPClient" }
 c3605908-9f0f-11e8-0a72-0d361c15a277 = { name = "LazIO", path = "L/LazIO" }
 c3611d14-8923-5661-9e6a-0046d554d3a4 = { name = "ColorVectorSpace", path = "C/ColorVectorSpace" }
+c3679e3b-785e-4ccc-b734-b7685cbb935e = { name = "SlepcWrap", path = "S/SlepcWrap" }
 c36e90e8-916a-50a6-bd94-075b64ef4655 = { name = "PowerModels", path = "P/PowerModels" }
 c36e975a-824b-4404-a568-ef97ca766997 = { name = "CoverageTools", path = "C/CoverageTools" }
 c3751834-3f3f-50ce-917e-73bb091d662c = { name = "MolecularTrajectories", path = "M/MolecularTrajectories" }
