New version: StatisticalRethinking v3.2.3
UUID: 2d09df54-9d0f-5258-8220-54c2a3d4fbee
Repo: https://github.com/StatisticalRethinkingJulia/StatisticalRethinking.jl.git
Tree: fbca64b29ad2305ac3d04ed562141edd2fd5136b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/S/StatisticalRethinking/Versions.toml
+++ b/S/StatisticalRethinking/Versions.toml
@@ -153,3 +153,6 @@ git-tree-sha1 = "951e0e0a72dad59a354c6e4a9cf5141ddb843eb3"
 
 ["3.2.2"]
 git-tree-sha1 = "52bd884f813b52e0e984adfe1e815efe95e75d47"
+
+["3.2.3"]
+git-tree-sha1 = "fbca64b29ad2305ac3d04ed562141edd2fd5136b"
