New version: EditorsRepo v0.6.12
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: 3654fa221a289abb77704b2111d9455600f9e296

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Deps.toml
+++ b/E/EditorsRepo/Deps.toml
@@ -18,3 +18,8 @@ Orthography = "0b4c9448-09b0-4e78-95ea-3eb3328be36d"
 
 ["0.6.10-0"]
 Lycian = "7c215dd3-d1b4-4517-b6c6-0123f1059a20"
+
+["0.6.12-0"]
+CategoricalArrays = "324d7699-5711-5eae-9e2f-1d82baa6b597"
+PolytonicGreek = "72b824a7-2b4a-40fa-944c-ac4f345dc63a"
+PooledArrays = "2dfb63ee-cc39-5dd5-95bd-886bf059d720"
