--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -60,3 +60,6 @@ git-tree-sha1 = "b2d66a36921b0d5934697fef61d4d959d545c1b6"
 
 ["0.6.11"]
 git-tree-sha1 = "9e99f8718f3c43448ec883ba210e3df3159c2fed"
+
+["0.6.12"]
+git-tree-sha1 = "3654fa221a289abb77704b2111d9455600f9e296"
