--- a/E/EditorsRepo/Compat.toml
+++ b/E/EditorsRepo/Compat.toml
@@ -1,7 +1,5 @@
 [0]
-CSV = "0.8"
 CitableBase = "1.1.0-1"
-DataFrames = "0.22"
 DocStringExtensions = "0.8"
 Documenter = "0.26"
 julia = "1.5.0-1"
@@ -11,6 +9,10 @@ CitableObject = "0.1"
 
 ["0-0.3.0"]
 CitableText = "0.3"
+
+["0-0.6.11"]
+CSV = "0.8"
+DataFrames = "0.22"
 
 ["0-0.6.4"]
 CitableTeiReaders = "0.2"
@@ -35,6 +37,13 @@ Lycian = "0.1"
 
 ["0.6.11-0"]
 EditionBuilders = "0.2.3-0.2"
+
+["0.6.12-0"]
+CSV = "0.8.2-0.8"
+CategoricalArrays = "0.9"
+DataFrames = "0.22.3-0.22"
+PolytonicGreek = "0.1"
+PooledArrays = "0.5.3-0.5"
 
 ["0.6.5-0"]
 CitableTeiReaders = "0.4"
