--- a/Registry.toml
+++ b/Registry.toml
@@ -4601,6 +4601,7 @@ e853e177-4ae5-507f-af00-4766098699e4 = { name = "BoltzmannMachinesPlots", path =
 e853f5be-6863-11e9-128d-476edb89bfb5 = { name = "Onda", path = "O/Onda" }
 e86bdf43-55f7-5ea2-9fd0-e7daa2c0f2b4 = { name = "rr_jll", path = "R/rr_jll" }
 e8712464-036d-575c-85ac-952ae31322ab = { name = "ImageQuilting", path = "I/ImageQuilting" }
+e87855f3-d877-40b7-8600-5f1cc2d263ad = { name = "BS_DESPOT", path = "B/BS_DESPOT" }
 e87aa5a2-564e-44b1-a90b-331274d9f6ee = { name = "Hashids", path = "H/Hashids" }
 e88e6eb3-aa80-5325-afca-941959d7151f = { name = "Zygote", path = "Z/Zygote" }
 e89237b0-9201-11e9-31b0-6361926203f7 = { name = "Turf", path = "T/Turf" }
