--- a/D/DynamicalSystems/Compat.toml
+++ b/D/DynamicalSystems/Compat.toml
@@ -44,11 +44,11 @@ RecurrenceAnalysis = "1"
 ChaosTools = "1.8.0-1"
 DelayEmbeddings = "1"
 
-["1.4-1"]
-Reexport = "0.2"
-
 ["1.4-1.7.0"]
 StaticArrays = "0.12"
+
+["1.4-1.7.1"]
+Reexport = "0.2"
 
 ["1.5"]
 DelayEmbeddings = "1.10.0-1"
@@ -60,7 +60,7 @@ julia = "1.5.0-1"
 ["1.5-1.6"]
 ChaosTools = "1.15.0-1"
 
-["1.6-1"]
+["1.6-1.7.1"]
 RecurrenceAnalysis = "1.3.1-1"
 
 ["1.6.0"]
@@ -77,3 +77,7 @@ Entropies = "0.9"
 ChaosTools = "1.21.1-1"
 Entropies = "0.11"
 StaticArrays = ["0.12", "1"]
+
+["1.7.2-1"]
+RecurrenceAnalysis = "1.5.0-1"
+Reexport = ["0.2-0.3", "1"]
