--- a/D/DynamicalSystems/Versions.toml
+++ b/D/DynamicalSystems/Versions.toml
@@ -30,3 +30,6 @@ git-tree-sha1 = "b6efdb2c2c7832c0ccf8d213812166292e4bd269"
 
 ["1.7.1"]
 git-tree-sha1 = "b454252805079255c7799accd6a8561a01ca97ec"
+
+["1.7.2"]
+git-tree-sha1 = "1f4400e01f445fed65b3a418636b3d11116701be"
