New version: GriddingMachine v0.1.1
UUID: f20cf718-bf4d-4727-bc8f-485b1f283ac6
Repo: https://github.com/CliMA/GriddingMachine.jl.git
Tree: c745ac32bbca0908a852bd18febf2b305141738c

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/G/GriddingMachine/Versions.toml
+++ b/G/GriddingMachine/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "9aab20254b91344761e76d8e5607cdedc56a6627"
+
+["0.1.1"]
+git-tree-sha1 = "c745ac32bbca0908a852bd18febf2b305141738c"
