--- a/G/GriddingMachine/Compat.toml
+++ b/G/GriddingMachine/Compat.toml
@@ -9,4 +9,9 @@ NetCDF = "0.10"
 Parameters = "0.12"
 PkgUtility = "0.1"
 ProgressMeter = "1.3.0-1"
+
+["0-0.1.0"]
 julia = "1.3.0-1"
+
+["0.1.1-0"]
+julia = "1.5.0-1"
