New version: Vlasiator v0.1.9
UUID: 7d2ba682-ad6e-4e20-80d9-3f2d4a610bb4
Repo: https://github.com/henry2004y/Vlasiator.jl.git
Tree: d7bac552d3ac8fef8613da6848ef30f484685c20

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/V/Vlasiator/Versions.toml
+++ b/V/Vlasiator/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "cf9f56aa6b3a9b7f25229adbda475f3bed271a93"
 
 ["0.1.8"]
 git-tree-sha1 = "e48063a5a6b2d01dd28d48e98b562b267325d7f6"
+
+["0.1.9"]
+git-tree-sha1 = "d7bac552d3ac8fef8613da6848ef30f484685c20"
