--- a/M/Merly/Versions.toml
+++ b/M/Merly/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "0c12292949ae45c346c25e0a0a1b3dcad279dbdc"
 
 ["0.2.1"]
 git-tree-sha1 = "4688eee7f01a43d2a062a1469e012fdb5212f259"
+
+["1.0.0"]
+git-tree-sha1 = "8f37b9c80fb577992113a617d03bc106a4e2278c"
