--- a/P/PolytonicGreek/Versions.toml
+++ b/P/PolytonicGreek/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.0"]
 git-tree-sha1 = "f5745a8a8231636c5d6bab468222d16957b184c5"
+
+["0.1.1"]
+git-tree-sha1 = "bd05314c0b24513fbb03d540a28858769f5efa44"
