New version: Orthography v0.5.0
UUID: 0b4c9448-09b0-4e78-95ea-3eb3328be36d
Repo: https://github.com/HCMID/Orthography.jl.git
Tree: bd8ac88de4d00c65432d84abf18288973a83b431

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/O/Orthography/Versions.toml
+++ b/O/Orthography/Versions.toml
@@ -12,3 +12,6 @@ git-tree-sha1 = "f49252c53b2b5e28ee02d96a41c6ca7cf7abd51e"
 
 ["0.4.1"]
 git-tree-sha1 = "53ae798c10043b4a990d1557a594388b0e07a57a"
+
+["0.5.0"]
+git-tree-sha1 = "bd8ac88de4d00c65432d84abf18288973a83b431"
