--- a/L/Lycian/Versions.toml
+++ b/L/Lycian/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "8dd3b8ace9924b24ef9bb4b843f2dbe25ce93229"
 
 ["0.1.2"]
 git-tree-sha1 = "690a8d35f2f19c125130e01ded9e0babef11c7fb"
+
+["0.1.3"]
+git-tree-sha1 = "059ea8769fae60ae8641720f9a9af8cd9f944125"
