New version: EditorsRepo v0.6.13
UUID: 3fa2051c-bcb6-4d65-8a68-41ff86d56437
Repo: https://github.com/HCMID/EditorsRepo.jl.git
Tree: fda67e66f26e602b3ee6c89a513700b57541c0f3

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/E/EditorsRepo/Compat.toml
+++ b/E/EditorsRepo/Compat.toml
@@ -45,6 +45,9 @@ DataFrames = "0.22.3-0.22"
 PolytonicGreek = "0.1"
 PooledArrays = "0.5.3-0.5"
 
+["0.6.13-0"]
+Orthography = "0.5"
+
 ["0.6.5-0"]
 CitableTeiReaders = "0.4"
 
@@ -57,5 +60,5 @@ EditionBuilders = "0.2.1-0.2"
 ["0.6.8-0.6.10"]
 EditionBuilders = "0.2.2-0.2"
 
-["0.6.9-0"]
+["0.6.9-0.6.12"]
 Orthography = "0.4.1-0.4"
