--- a/E/EditorsRepo/Versions.toml
+++ b/E/EditorsRepo/Versions.toml
@@ -63,3 +63,6 @@ git-tree-sha1 = "9e99f8718f3c43448ec883ba210e3df3159c2fed"
 
 ["0.6.12"]
 git-tree-sha1 = "3654fa221a289abb77704b2111d9455600f9e296"
+
+["0.6.13"]
+git-tree-sha1 = "fda67e66f26e602b3ee6c89a513700b57541c0f3"
