--- a/M/Merly/Compat.toml
+++ b/M/Merly/Compat.toml
@@ -10,6 +10,12 @@ julia = ["0.7", "1"]
 julia = "1"
 
 [1]
+julia = "1.5.0-1"
+
+["1.0.0"]
 HTTP = "0.8.15-0.8"
 MbedTLS = "1.0.2-1"
-julia = "1.5.0-1"
+
+["1.0.1-1"]
+HTTP = "0.9.2-0.9"
+MbedTLS = "1.0.3-1"
