New version: ModiaBase v0.7.1
UUID: ec7bf1ca-419d-4510-bbab-199861c55244
Repo: https://github.com/ModiaSim/ModiaBase.jl.git
Tree: 4dee4807812ece93fb6ed3911e0810aa1632ac6c

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/M/ModiaBase/Versions.toml
+++ b/M/ModiaBase/Versions.toml
@@ -1,2 +1,5 @@
 ["0.7.0"]
 git-tree-sha1 = "b16764508a98aea82b2d3b57ba62ab590031da45"
+
+["0.7.1"]
+git-tree-sha1 = "4dee4807812ece93fb6ed3911e0810aa1632ac6c"
