--- a/M/ModiaBase/Compat.toml
+++ b/M/ModiaBase/Compat.toml
@@ -1,8 +1,13 @@
 [0]
 DataFrames = "0.19-0.22"
-DataStructures = "0.18"
 DiffRules = "1"
 Measurements = "2.5.0-2"
 MonteCarloMeasurements = "0.10"
 Unitful = "1.3.0-1"
 julia = "1.5.0-1"
+
+["0-0.7.0"]
+DataStructures = "0.18"
+
+["0.7.1-0"]
+DataStructures = "0.17-0.18"
