New version: NearestNeighborModels v0.1.2
UUID: 636a865e-7cf4-491e-846c-de09b730eb36
Repo: https://github.com/alan-turing-institute/NearestNeighborModels.jl.git
Tree: 8ac252ac42fba765182e668cf919f80bef982418

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/N/NearestNeighborModels/Versions.toml
+++ b/N/NearestNeighborModels/Versions.toml
@@ -1,2 +1,5 @@
 ["0.1.1"]
 git-tree-sha1 = "8c6b3a6ad200bb928a28e67360399d359f662c04"
+
+["0.1.2"]
+git-tree-sha1 = "8ac252ac42fba765182e668cf919f80bef982418"
