--- a/B/BijectiveHilbert/Versions.toml
+++ b/B/BijectiveHilbert/Versions.toml
@@ -6,3 +6,6 @@ git-tree-sha1 = "dc88375a01504ecd67abcfb7624479cf5fb93c17"
 
 ["0.2.1"]
 git-tree-sha1 = "f0fe4c975245db03936464bd38d27a3c34f088b5"
+
+["0.2.2"]
+git-tree-sha1 = "8f0b3e6287df91d45e50460ec2792d559e1a08ad"
