New version: HyperDualNumbers v4.0.5
UUID: 50ceba7f-c3ee-5a84-a6e8-3ad40456ec97
Repo: https://github.com/JuliaDiff/HyperDualNumbers.jl.git
Tree: 0e8e6f00bcbd48f1365bf5abbdd1da38d5d40d63

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/H/HyperDualNumbers/Versions.toml
+++ b/H/HyperDualNumbers/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "6500a28423ff3d0167a25e8495122e0ea0b28783"
 
 ["4.0.4"]
 git-tree-sha1 = "ec84dfc5c0962260c5f894fbfa51263bbdce251a"
+
+["4.0.5"]
+git-tree-sha1 = "0e8e6f00bcbd48f1365bf5abbdd1da38d5d40d63"
