New version: PlotPlants v0.1.9
UUID: 62700b34-1872-4917-b6af-4f42ae699f38
Repo: https://github.com/Yujie-W/PlotPlants.jl.git
Tree: 197050d7f41a6214319edfbd6892d7d90b6023f4

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/PlotPlants/Versions.toml
+++ b/P/PlotPlants/Versions.toml
@@ -24,3 +24,6 @@ git-tree-sha1 = "6fa4b808419554f6382d65b0e9a23873c63b6faa"
 
 ["0.1.8"]
 git-tree-sha1 = "275dd3cfc8fae02e702c65f2109bf5450628957b"
+
+["0.1.9"]
+git-tree-sha1 = "197050d7f41a6214319edfbd6892d7d90b6023f4"
