--- a/C/Chess/Versions.toml
+++ b/C/Chess/Versions.toml
@@ -9,3 +9,6 @@ git-tree-sha1 = "5adb8cf7e2bd65ed77c8f749696d0bb6a66b199c"
 
 ["0.4.0"]
 git-tree-sha1 = "c59b5f14af5397401d9891050219e9e9df814a91"
+
+["0.5.0"]
+git-tree-sha1 = "3349eeb4c18d104304aaf57ddd4d3d510949ee69"
