New version: DynamicalSystemsBase v1.7.1
UUID: 6e36e845-645a-534a-86f2-f5d4aa5a06b4
Repo: https://github.com/JuliaDynamics/DynamicalSystemsBase.jl.git
Tree: 225f340f51928f6c2133d93ba7940a856d40e15b

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DynamicalSystemsBase/Versions.toml
+++ b/D/DynamicalSystemsBase/Versions.toml
@@ -108,3 +108,6 @@ git-tree-sha1 = "a024c3e831db486734c8e17a21594e204a97504e"
 
 ["1.7.0"]
 git-tree-sha1 = "a54e603cd8980bcdff8a2f0f2dbc514a015c2320"
+
+["1.7.1"]
+git-tree-sha1 = "225f340f51928f6c2133d93ba7940a856d40e15b"
