--- a/D/DynamicalSystemsBase/Versions.toml
+++ b/D/DynamicalSystemsBase/Versions.toml
@@ -111,3 +111,6 @@ git-tree-sha1 = "a54e603cd8980bcdff8a2f0f2dbc514a015c2320"
 
 ["1.7.1"]
 git-tree-sha1 = "225f340f51928f6c2133d93ba7940a856d40e15b"
+
+["1.8.0"]
+git-tree-sha1 = "5b4ad43f91e4091366a2af3f387e4743ca93b181"
