New version: BlockDiagonals v0.1.12
UUID: 0a1fb500-61f7-11e9-3c65-f5ef3456f9f0
Repo: https://github.com/invenia/BlockDiagonals.jl.git
Tree: e3f15edc60bd09ff598d7c0b078a5b5ca4fc6c2d

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/B/BlockDiagonals/Versions.toml
+++ b/B/BlockDiagonals/Versions.toml
@@ -33,3 +33,6 @@ git-tree-sha1 = "e61c7eea5192b06140b812191dd7b89342154873"
 
 ["0.1.11"]
 git-tree-sha1 = "5f1037ced39d778de92a3016d4d830db9f7b096e"
+
+["0.1.12"]
+git-tree-sha1 = "e3f15edc60bd09ff598d7c0b078a5b5ca4fc6c2d"
