New version: DynamicalSystemsBase v1.8.2
UUID: 6e36e845-645a-534a-86f2-f5d4aa5a06b4
Repo: https://github.com/JuliaDynamics/DynamicalSystemsBase.jl.git
Tree: b0c53641cf4b7a44f5b51f4ea575daa298bbc60c

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/D/DynamicalSystemsBase/Versions.toml
+++ b/D/DynamicalSystemsBase/Versions.toml
@@ -117,3 +117,6 @@ git-tree-sha1 = "5b4ad43f91e4091366a2af3f387e4743ca93b181"
 
 ["1.8.1"]
 git-tree-sha1 = "c81de31c0673409f88b89db30999cc3e95b41e5f"
+
+["1.8.2"]
+git-tree-sha1 = "b0c53641cf4b7a44f5b51f4ea575daa298bbc60c"
