--- a/Registry.toml
+++ b/Registry.toml
@@ -4171,6 +4171,7 @@ d14d998a-9e6b-11e8-16d3-6f2879ea456d = { name = "PredictMDExtra", path = "P/Pred
 d16e510f-c236-4b74-8eb3-5d2ec9a3ec6e = { name = "ParameterisedModule", path = "P/ParameterisedModule" }
 d1922b25-af4e-4ba3-84af-fe9bea896051 = { name = "LightOSM", path = "L/LightOSM" }
 d1acc4aa-44c8-5952-acd4-ba5d80a2a253 = { name = "IntervalArithmetic", path = "I/IntervalArithmetic" }
+d1b5debe-99ef-4a51-88bd-55361cc46b8b = { name = "Arrhenius", path = "A/Arrhenius" }
 d1bb7020-b2be-4340-9d18-d24ca645bddb = { name = "OceanBasins", path = "O/OceanBasins" }
 d1d4a3ce-64b1-5f1a-9ba4-7e7e69966f35 = { name = "BitFlags", path = "B/BitFlags" }
 d1dcc2e6-806e-11e9-2897-3f99785db2ae = { name = "Reproject", path = "R/Reproject" }
