New version: PetscWrap v0.1.2
UUID: 5be22e1c-01b5-4697-96eb-ef9ccdc854b8
Repo: https://github.com/bmxam/PetscWrap.jl.git
Tree: d29f5ca9417eacbfad322c1178455e45ca60ab10

Registrator tree SHA: 7c16227cd1dc9bae38e25d6dc6f9c020f8ebca46

--- a/P/PetscWrap/Versions.toml
+++ b/P/PetscWrap/Versions.toml
@@ -3,3 +3,6 @@ git-tree-sha1 = "1bd2e23e2706b088c00a4fbb9d73f4ffe7772aa4"
 
 ["0.1.1"]
 git-tree-sha1 = "e2ed7077b69ac52bc5307cda4c927b609d0b0425"
+
+["0.1.2"]
+git-tree-sha1 = "d29f5ca9417eacbfad322c1178455e45ca60ab10"
